<resources>
    <string name="app_name">Task Management</string>
    <string name="login">Login</string>
    <string name="username">USERNAME</string>
    <string name="field_required">Field required !!</string>
    <string name="new_task">New Task</string>
    <string name="task_title">Task Title</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
</resources>
