<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:recycler="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tdvm"
            type="task.lobna.taskmanagement.viewmodel.TaskDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.activity.TaskDetailsActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:elevation="8dp"
            app:contentInsetEnd="@dimen/margin_padding_size_medium"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/default_icon_size"
                    android:layout_height="@dimen/default_icon_size"
                    android:onClick="@{tdvm::back}"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_padding_size_large"
                    android:layout_marginEnd="@dimen/margin_padding_size_large"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{tdvm.taskObservable.title}"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    tools:text="Go to the shop" />

                <ImageView
                    android:layout_width="@dimen/default_icon_size"
                    android:layout_height="@dimen/default_icon_size"
                    android:onClick="@{tdvm::delete}"
                    android:src="@drawable/ic_delete_red" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/done_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/done"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/tick_iv"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:onClick="@{tdvm::markAsDone}"
                    android:src="@{tdvm.taskObservable.done ? @drawable/ic_tick_done : @drawable/ic_tick_undone}"
                    app:layout_constraintBottom_toBottomOf="@id/done_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/done_title" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:background="@color/colorGreyDark"
                    app:layout_constraintTop_toBottomOf="@id/done_title" />

                <TextView
                    android:id="@+id/date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/date"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toStartOf="@id/done_title"
                    app:layout_constraintTop_toBottomOf="@id/divider1" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{tdvm.taskObservable.date}"
                    android:textColor="#2376ff"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintBottom_toBottomOf="@id/date_title"
                    app:layout_constraintEnd_toEndOf="@id/tick_iv"
                    app:layout_constraintTop_toTopOf="@id/date_title" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:background="@color/colorGreyDark"
                    app:layout_constraintTop_toBottomOf="@id/date_title" />

                <TextView
                    android:id="@+id/priority_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/priority"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toStartOf="@id/done_title"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <LinearLayout
                    android:id="@+id/priority_layout"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_rectangle_orange_rounded_8"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/priority_title"
                    app:layout_constraintEnd_toEndOf="@id/tick_iv"
                    app:layout_constraintTop_toTopOf="@id/priority_title">

                    <TextView
                        android:id="@+id/priority_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@{tdvm.taskObservable.priority == 1 ? @drawable/shape_rectangle_orange_rounded_start_8 : null}"
                        android:gravity="center"
                        android:onClick="@{tdvm::setPriority}"
                        android:text="!"
                        android:textColor="@{tdvm.taskObservable.priority == 1 ? @color/colorWhite : @color/colorOrange}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorOrange" />

                    <TextView
                        android:id="@+id/priority_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@{tdvm.taskObservable.priority == 2 ? @color/colorOrange : @android:color/transparent}"
                        android:gravity="center"
                        android:onClick="@{tdvm::setPriority}"
                        android:text="!!"
                        android:textColor="@{tdvm.taskObservable.priority == 2 ? @color/colorWhite : @color/colorOrange}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorOrange" />

                    <TextView
                        android:id="@+id/priority_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@{tdvm.taskObservable.priority == 3 ? @drawable/shape_rectangle_orange_rounded_end_8 : null}"
                        android:gravity="center"
                        android:onClick="@{tdvm::setPriority}"
                        android:text="!!!"
                        android:textColor="@{tdvm.taskObservable.priority == 3 ? @color/colorWhite : @color/colorOrange}"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:background="@color/colorGreyDark"
                    app:layout_constraintTop_toBottomOf="@id/priority_title" />

                <TextView
                    android:id="@+id/comments_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/comments"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toStartOf="@id/done_title"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/margin_padding_size_small"
                    android:paddingBottom="@dimen/margin_padding_size_small"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/comment_layout"
                    app:layout_constraintTop_toBottomOf="@id/comments_title"
                    recycler:adapter="@{tdvm.commentsAdapter}" />

                <LinearLayout
                    android:id="@+id/comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreyLight"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_padding_size_medium"
                        android:layout_marginTop="@dimen/margin_padding_size_medium"
                        android:layout_marginEnd="@dimen/margin_padding_size_medium"
                        android:layout_marginBottom="@dimen/margin_padding_size_medium"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:hint="@string/comment"
                        android:paddingStart="@dimen/margin_padding_size_medium"
                        android:paddingTop="@dimen/margin_padding_size_small"
                        android:paddingEnd="@dimen/margin_padding_size_medium"
                        android:paddingBottom="@dimen/margin_padding_size_small"
                        android:text="@={tdvm.commentObservable}"
                        android:textColor="@color/colorGreyDark"
                        android:textColorHint="@color/colorGreyLight"
                        android:textSize="@dimen/text_size_medium" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_size_small"
                        android:layout_marginEnd="@dimen/margin_padding_size_medium"
                        android:layout_marginBottom="@dimen/margin_padding_size_small"
                        android:onClick="@{tdvm::send}"
                        android:src="@drawable/ic_send" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>